added: registration form draft

--- a/registration/templates/registration/navigation_menu.html
+++ b/registration/templates/registration/navigation_menu.html
@@ -63,7 +63,7 @@
     {% endblock main_navigation %}
 
     {% block main_content %}
-    {% endblock %}
+    {% endblock main_content%}
 
 </body>
 </html>
