fixed: all dependencies from 'registration' app were switched to 'authorization' app

--- a/authorization/templates/authorization/navigation_menu.html
+++ b/authorization/templates/authorization/navigation_menu.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
-    <link rel="stylesheet" href="{% static 'registration/css/style.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'authorization/css/style.css' %}" type="text/css">
     <title>{{ title }}</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <div id="main-nav-wrapper">
                 <ul id="main-nav">
                     <li class="logo-wrapper main-nav-item">
-                        <img class="logo" src="{% static 'registration/images/logo.png' %}" alt="mill and text 'Notes'">
+                        <img class="logo" src="{% static 'authorization/images/logo.png' %}" alt="mill and text 'Notes'">
                     </li>
                     <li class="menu-wrapper main-nav-item">
                         <div id="nav-menu">
