--- a/authorization/static/authorization/css/style.css
+++ b/authorization/static/authorization/css/style.css
@@ -86,18 +86,21 @@ table {
 	transform: translate(-50%, -50%);
 }
 
-#reg-wrapper {
+#reg-wrapper,
+#auth-wrapper {
 	background-color: #ffffff;
 	border-radius: 50px;
 	display: inline-block;
 }
 
-#reg-form {
+#reg-form,
+#auth-form {
 	text-align: center;
 	overflow: hidden;
 }
 
-#reg-form__header {
+#reg-form__header,
+#auth-form__header {
 	font-size: 50px;
 	margin: 30px 0 40px;
 }
@@ -110,7 +113,8 @@ table {
 	position: relative;
 	left: 0;
 
-	transition: left 0.5s ease;
+	transition: left ease;
+	transition-duration: 0.5s;
 }
 
 #reg-first-step,
@@ -145,7 +149,8 @@ table {
 
 #reg-next-step__button,
 #reg-submit-step__button,
-#reg-previous-step__button {
+#reg-previous-step__button,
+#auth-submit__button {
 	margin: 0 20px 30px;
 	padding: 5px 10px;
 	background-color: #6e4dea;
@@ -157,9 +162,19 @@ table {
 	transition: background-color 0.3s;
 }
 
+#auth-reset-passw__button {
+	color: #6e4dea;
+	font-size: 20px;
+}
+
 #reg-next-step__button:hover,
 #reg-submit-step__button:hover,
-#reg-previous-step__button:hover {
+#reg-previous-step__button:hover,
+#auth-submit__button:hover {
 	cursor: pointer;
 	background-color: #4c35a0;
+}
+
+#auth-reset-passw__button:hover {
+	cursor: pointer;
 }
