--- a/userprofile/templates/userprofile/base.html
+++ b/userprofile/templates/userprofile/base.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
     <link rel="stylesheet" href="{% static 'userprofile/css/style.css' %}" type="text/css">
     <title>{{ title }}</title>
 </head>
