--- a/userprofile/templates/userprofile/profile.html
+++ b/userprofile/templates/userprofile/profile.html
@@ -33,7 +33,7 @@
                                         -->
                                     </div>
                                     
-                                    <a class="friend-link" href="{% url 'profile:profile_page_with_period' requested_user_uuid=friend.uuid period_abbreviature=td %}">
+                                    <a class="friend-link" href="{% url 'profile:profile_page_with_period' requested_user_uuid=friend.uuid period_abbreviature='td' %}">
                                         {{ friend.username|truncatechars:16 }}
                                     </a>
                                 </div>
@@ -105,11 +105,11 @@
                 <div id="task-blocks-wrapper">
                     <ul id="task-blocks">
                         {% if tasks_by_period %}
-                            {% for period in tasks_by_period|slice:":7" %}
+                            {% for period in tasks_by_period %}
                                 <li id="task-{{ forloop.counter }}" class="task-block">
                                     <div class="task-wrapper">
-                                        {{ period.date|date:"F" }} <br>
-                                        {{ period.number }}
+                                        {{ period.date|date:date_filter }} <br>
+                                        {{ period.number_of_tasks }}
                                     </div> 
                                 </li>
                             {% endfor %}
